2011-11-08 Marco Balmer  <marco@balmer.name>

    * Check configuration settings before starting up

2011-10-14 Marco Balmer  <marco@balmer.name>

    * Cleanup examples/Testbot.pm
    * Add more examples/
    * Improove manpage and more details

2011-10-13 Marco Balmer  <marco@balmer.name>

    * Tagging 0.0.1

    * Staged for opensource GPL and debian packaging

2009-12-03 Marco Balmer  <marco@balmer.name>

    * Last internal release
